# scrapeground

./: README.md  build.py  index.html  paging-infinite-button.html  paging-infinite.html  products-1.html  products-2.html  products-3.html  products-4.html  products-5.html  products-6.html  products-7.html  products-spa.html  pyproject.toml
data/: products.json
paging/: products-1.html  products-2.html  products-3.html  products-4.html  products-5.html  products-6.html  products-7.html
paging/infinite/: 2-button.html  2.html  3-button.html  3.html  4-button.html  4.html  5-button.html  5.html  6-button.html  6.html  7-button.html  7.html
product/: beanie-1.html  perfume-1.html  pomgranade-1.html  shampoo-1.html  shoes-1.html  shoes-2.html  socks-1.html
product-previews/: 2.html  3.html  4.html  5.html  6.html  7.html
product/dynamic/: beanie-1.html  perfume-1.html  pomgranade-1.html  shampoo-1.html  shoes-1.html  shoes-2.html  socks-1.html
product/html/: beanie-1.html  perfume-1.html  pomgranade-1.html  shampoo-1.html  shoes-1.html  shoes-2.html  socks-1.html
product/json/: beanie-1.json  perfume-1.json  pomgranade-1.json  shampoo-1.json  shoes-1.json  shoes-2.json  socks-1.json
s/: csrf.html
static/js/: main.js
templates/: base.html  index.html  product.html  products-spa-page.html  products-spa.html  products.html
templates/includes/: product-paging.html  product-preview.html
templates/macros/: products.html
