[tool.poetry]
name = "scrapeground"
version = "0.1.0"
description = ""
authors = ["granitosaurus <bernardas.alisauskas@pm.me>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
